<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="shop.ineed.app.ineed.activity.UpdatePersonalDataActivity">

    <include layout="@layout/include_toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <include
            android:id="@+id/progressSettingsUser"
            layout="@layout/include_progress" />

        <ScrollView
            android:id="@+id/containerSettingsUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivProfileUpdate"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivIconCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/layout_corners"
                        android:tint="@android:color/white"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        app:srcCompat="@drawable/ic_camera" />

                </android.support.constraint.ConstraintLayout>

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/personal_data" />


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <LinearLayout
                            android:id="@+id/layoutEditEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/emailUpdate"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:focusable="false"
                                    android:hint="@string/email"
                                    android:imeActionId="@+id/login"
                                    android:imeActionLabel="@string/email"
                                    android:imeOptions="actionUnspecified"
                                    android:inputType="textWebEmailAddress"
                                    android:maxLines="1"
                                    android:textSize="16sp" />

                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layoutEditName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/nameUpdate"

                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/name"
                                    android:imeActionId="@+id/login"
                                    android:imeActionLabel="@string/name"
                                    android:imeOptions="actionUnspecified"
                                    android:inputType="textWebEmailAddress"
                                    android:maxLines="1"
                                    android:singleLine="true"
                                    android:textSize="16sp" />

                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layoutEditPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/phoneUpdate"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:digits="+() 1234567890-"
                                    android:hint="@string/phone"
                                    android:imeActionId="@+id/login"
                                    android:imeActionLabel="@string/phone"
                                    android:imeOptions="actionUnspecified"
                                    android:inputType="phone"
                                    android:maxLength="15"
                                    android:textSize="16sp" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@drawable/layout_border"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelUpdate"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/grey_600" />

        <Button
            android:id="@+id/btnSaveUpdate"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/dialog_ok"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>
